Day02 (#3)
* Prepare for day 02

* Solve for Day 02

* Solve for Day 02 Part 2

* Minor formatting changes